--- a/doc/jitter.texi
+++ b/doc/jitter.texi
@@ -1994,7 +1994,10 @@ No-threading in a less favourable case, 32-bit MIPS.
 @fixme{somewhere: wrapping: what to wrap.  CPP macros whose definition
 is unknown are very dangerous, since they may expand to function calls
 or to references to unknown globals.  These need to be used through
-wrapped functions explicitly defined by the user}
+wrapped functions explicitly defined by the user.  Gnulib functions
+can cause such problems.  errno is another case.
+division may be implemented as an assembly or C routine on some
+architectures.}
 
 @menu
 * Syntax::                      How to write a VM specification.
