--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2022-07-10  Jose E. Marchesi  <jose.marchesi@oracle.com>
+
+	* pickles/ctf-frame.pk: Fix indentation and replace tabs with
+	whitespaces.
+	* pickles/ctf-frame-dump.pk: Likewise.
+
 2022-07-09  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>
 
 	* libpoke/pkl-gen.c (pkl_gen_pr_op_excond): Invert the logic of excond
