--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2022-07-11  Jose E. Marchesi  <jose.marchesi@oracle.com>
+
+	* pickles/ctf.pk (ctf_get_dict): Raise an assert instead of
+	E_inval.
+
 2022-05-05  Jose E. Marchesi  <jemarch@gnu.org>
 
 	* libpoke/pkl-gen.pks (struct_mapper): Add an explicative message
